--- a/localisation/french/MD_focus_AFG_l_french.yml
+++ b/localisation/french/MD_focus_AFG_l_french.yml
@@ -441,10 +441,10 @@
  TalibanAttack.2.a: "We must hunt those Taliban terrorists down!"
  TalibanAttack.3.t: "Taliban Bus Bombing Kills our Citizens"
  TalibanAttack.3.d: "Today, a group of Afghan Taliban militants forced a bus to stop with a truck, used Kalashnikovs to shoot the civilians inside and then detonated a car bomb near the bus. After the Afghan military police arrived, the Taliban militants fled the scene, some were shot and killed, while the few who did not escape were captured and taken to the military police for interrogation.\n\nThe attack has also resulted in casualties of our citizens, our ambassador to Afghanistan has contacted Afghan officials to attempt to deal with the aftermath."
- TalibanAttack.3.a: "Send our condolences to the families of victims!"
+ TalibanAttack.3.a: "Nous présentons nos condoléances aux familles des victimes !"
  TalibanAttack.4.t: "Foreigners Killed in Taliban Bus Bombing"
  TalibanAttack.4.d: "Today, a group of Afghan Taliban militants forced a bus to stop with a truck, used Kalashnikovs to shoot the civilians inside and then detonated a car bomb near the bus. After the Afghan military police arrived, the Taliban militants fled the scene, some were shot and killed, while the few who did not escape were captured and taken to the military police for interrogation.\n\nThe attack has resulted in casualties of local Afghans and foreign citizens and has drawn widespread condemnation from the international community."
- TalibanAttack.4.a: "Send our condolences to the victims!"
+ TalibanAttack.4.a: "Nous présentons nos condoléances aux victimes !"
  TalibanAttack.5.t: "Taliban Attacks Fuel Tanker Convoy"
  TalibanAttack.5.d: "Today, Taliban militants attacked a convoy of fuel trucks that were supposed to deliver vital fuel to the military as well as military police. Taliban militants set fire to the tankers and the drivers of the tankers were kidnapped by the Taliban. The whereabouts of these drivers are as of yet, unknown.\n\nThere are no reports of casualties among local residents as of yet but the tankers were left completely burnt out and nearby roads are fully shut off by the military for safety purposes. It is predicted that it will take some time for life to return to normal in the area for local residents."
  TalibanAttack.5.a: "We must rescue those drivers!"
