--- a/localisation/french/MD_focus_PER_l_french.yml
+++ b/localisation/french/MD_focus_PER_l_french.yml
@@ -1,8 +1,8 @@
 ﻿l_french:
  iran_focus: "Iranian Focus tree"
  PER_NEW_LINE_TOOLTIP: " \n"
- PER_the_third_development_plan: "The Third Development Plan"
- PER_the_third_development_plan_desc: "The Third (Post-Revolution) Development Plan included measures and actions for restructuring Iran's state-dominated economy toward a globally oriented market system, and measures dealing with domestic and foreign policies, national security, and cultural endeavors. However, it is too much to realistically complete within 5 years, so we must focus on what portion of the plan to do."
+ PER_the_third_development_plan: "Le troisième plan de développement"
+ PER_the_third_development_plan_desc: "Le troisième plan de développement (post-révolution) comprenait des mesures et des actions visant à restructurer l'économie iranienne dominée par l'État vers un système de marché orienté vers le monde, ainsi que des mesures traitant des politiques intérieures et étrangères, de la sécurité nationale et des efforts culturels. Cependant, c'est trop de choses à réaliser de manière réaliste en 5 ans, nous devons donc nous concentrer sur la partie du plan à réaliser."
  PER_IMIDRO: "IMIDRO"
  PER_IMIDRO_desc: "Iranian Mines & Mining Industries Development & Renovation Organization, known as IMIDRO, is a state-owned holding company active in the Iranian mining sector. IMIDRO has companies in the field of steel, copper, cement and minerals industries."
  PER_IMIDRO_REMOVE_TT: "§RRemoves§! §YIMIDRO§!."
