--- a/localisation/french/MD_focus_SOV_l_french.yml
+++ b/localisation/french/MD_focus_SOV_l_french.yml
@@ -1568,7 +1568,7 @@
  russia_news.6.t: "Sayano-Shushinskaya Hydroelectric Power Plant Incident"
  russia_news.6.d: "This morning a disaster happened on Russia's largest hydroelectric plant. One of its turbines catastrophically collapsed, resulting in death of 75 personnel memebers and a severe damage to the dam itself. Latest report states that 9 out of 10 turbines were destroyed or damaged."
  russia_news.6.o1: "Horrible."
- russia_news.6.o2: "Send our condolences"
+ russia_news.6.o2: "Nous vous présentons nos condoléances"
  russia_news.6.o3: "We hope that Russia will be fine"
  russia_news.6.o4: "They got what they deserve!"
  russia_news.1.t: "Vladimir Putin elected President"
@@ -1593,7 +1593,7 @@
  russia_news.50.t: "The Kursk Submarine Disaster"
  russia_news.50.d: "The officials of the Russian Federation have recently reported that the Russian Navy submarine K-141, designated name 'Kursk', has sunk in the Barents Sea, 75 kilometers from the shoreline of the Kola peninsula, on August 12th, 2000, at roughly 11:30 AM. The Russian Navy has publicly offered several explanations, including a collision or an attack by a NATO submarine. The NATO general secretary has already denied these allegations. The death toll stands at 118, which equals the entire crew of K-141."
  russia_news.50.o1: "A great tragedy!"
- russia_news.50.o2: "Send our condolences to our allies."
+ russia_news.50.o2: "Nous présentons nos condoléances à nos alliés."
  russia_news.50.o3: "We hope the Russians will be fine."
  russia_news.50.o4: "They got what was coming to them."
  russia_news.7.t: "Russia Joins The WTO!"
@@ -4182,7 +4182,7 @@
  SOV_yavlinskiy_desc: "Grigory Yavlinsky was born April 10, 1952 in the city of Lviv, however, he began to build a career in Russia, working in the capital's soviet government structures. As a professional economist, he was appointed to implement market reforms in the USSR, but his reform plan was soon scrapped in favor of other projects. From the early 1990s to the present day he has been the head of the Yabloko party."
  SOV_russian_liberalism: "Russian Liberalism"
  SOV_russian_liberalism_desc: "Russian society has long been ruled by various dictators and tyrants. From Ivan the Terrible to the Soviet regime there was not a single period when Russia could be called a truly free democratic state. It is time to correct this! It is time to show people all the advantages of Western liberalism, with its right to self-determination and freedom of speech."
- SOV_fix_eltsyn_shit: "Fix 90's Mistakes"
+ SOV_fix_eltsyn_shit: "Fix 90s Mistakes"
  SOV_fix_eltsyn_shit_desc: "The mistakes made by the team of Gaidar and Yeltsin led to the fact that Russia has turned into an Oligarchy, sucking all the juices from the country. The market was not that it was built, it turned into a cryptic reflection of capitalism. It is time to correct the mistakes of the past and show people real capitalism!"
  SOV_russian_free_speech: "Russian Free Speech"
  SOV_russian_free_speech_desc: "Freedom of speech is the foundation of every liberal society. When society cannot express its opinions and interests, the state closes in on itself and loses the ability to respond adequately to public demand. This is what happened under the empire, and this is what happened under the Soviet Union. The result was the collapse of countries and political chaos. It is very important to give people freedom of speech in order to prevent a new disintegration"
