--- a/localisation/french/MD_game_rules_l_french.yml
+++ b/localisation/french/MD_game_rules_l_french.yml
@@ -1,16 +1,16 @@
 ﻿l_french:
- MD_AI_RULES: "AI Options"
- MD_PEACE_DEALS: "Peace Conferences"
- MD_FOCUS_TREE_RULES: "Focus Tree Options"
- MD_FORMABLE_RULES: "Flags & Formable Nations"
- MD_ORGANISATION_RULES: "Organization Options"
- MD_INFLUENCE_RULES: "Influence System Options"
- MD_OPTIMISATION_RULES: "Optimization & Performance"
- MD_NUCLEAR_RULES: "Nuclear Rules"
- MD_RULES: "Millennium Dawn Miscellaneous Rules"
- MD_CHEAT_RULES: "Cheat Options"
- MD_RANDOM_RULES: "Randomize Game Rules"
- RULE_HARD_AI_ECONOMIC: "Economic AI"
+ MD_AI_RULES: "Options de l'IA"
+ MD_PEACE_DEALS: "Conférences de paix"
+ MD_FOCUS_TREE_RULES: "Options de l'arbre des priorités"
+ MD_FORMABLE_RULES: "Drapeaux & Nations formables"
+ MD_ORGANISATION_RULES: "Options d'organisation"
+ MD_INFLUENCE_RULES: "Options du système d'influence"
+ MD_OPTIMISATION_RULES: "Optimisation & Performances"
+ MD_NUCLEAR_RULES: "Règles nucléaires"
+ MD_RULES: "Règles diverses de Millennium Dawn"
+ MD_CHEAT_RULES: "Options de triche"
+ MD_RANDOM_RULES: "Règles de randomisation"
+ RULE_HARD_AI_ECONOMIC: "IA économique"
  RULE_DISABLE_HARD_AI_ECONOMIC: "Standard restriction"
  RULE_DISABLE_HARD_AI_ECONOMIC_DESC: "A standard restriction for AI, which does not allow it to strengthen its economy. For a historical game"
  RULE_ENABLE_HARD_AI_ECONOMIC: "No restrictions"
