--- a/localisation/french/MD_techs_l_french.yml
+++ b/localisation/french/MD_techs_l_french.yml
@@ -1752,9 +1752,9 @@
  rolling_thunder: "Tonnerre Roulant"
  rolling_thunder_desc: "Préparer nos navires lance-missiles pour des volées efficaces peut assurer un maximum de dégâts contre ceux qui nous menaceraient."
  death_from_below: "Mort venue d'en bas"
- death_from_below_desc: "Notre flotte de sous-marins est essentielle à nos opérations en haute mer. Assurer qu'ils sont capables de détruire des navires en une seule réussite."
+ death_from_below_desc: "Our submarine fleet is integral to our operations in the open oceans. Make sure they can successfully sink any enemy ships that appear in the battle zone."
  air_dominance: "Domination Aérienne"
- air_dominance_desc: "Mettre à terre tous les avions ennemis et entraver leur capacité à nous combattre dans le ciel."
+ air_dominance_desc: "By concentrating our efforts into air superiority over the seas, we can effectively ground all enemy aircraft and hamper their ability to fight us in the sky."
  missile_support: "Support par Missiles"
  missile_support_desc: "Utiliser nos missiles pour des opérations de soutien peut aider les opérations amphibies et contre nos ennemis."
  hidden_from_view: "Caché de la Vue"
@@ -1762,15 +1762,15 @@
  zone_of_control: "Zone de Contrôle"
  zone_of_control_desc: "Établir une zone de contrôle bien définie dans les mers."
  long_distance_persistence: "Persistance à Longue Distance"
- long_distance_persistence_desc: "Persister"
+ long_distance_persistence_desc: "By enhancing the long-range persistence of our ships, our fleet can maintain naval combat operations for as long as possible."
  nuclear_dominance: "Domination Nucléaire"
  nuclear_dominance_desc: "Plus le navire est lourd et le moteur nucléaire, meilleur est le navire."
  replenishment_at_sea: "Réapprovisionnement en Mer"
  replenishment_at_sea_desc: "Se concentrer sur nos convois et approvisionner adéquatement nos navires pendant leurs rotations assure que nous pouvons garder la flotte en mer plus longtemps."
  logistical_goliath: "Améliorations Logistiques pour les Goliaths"
- logistical_goliath_desc: "Nos navires Goliath consomment trop. Introduire de nouveaux principes d'organisation du travail aidera à économiser des fournitures et à les utiliser ailleurs."
+ logistical_goliath_desc: "Our current method of resupplying capital ships at sea can be greatly improved upon. Introducing new principles of convoy management will help to reduce the attrition of much needed supplies and fuel to our most important naval assets."
  man_in_the_high_seas: "Homme en Haute Mer"
- man_in_the_high_seas_desc: "Notre marine sera l'homme en haute mer. Le dominant qui est intouchable à travers n'importe quel océan dans n'importe quel théâtre."
+ man_in_the_high_seas_desc: "Our navy will be the man in the high seas. This will ensure that our fleet has an unshakable dominance across the oceans in any war zone."
  global_naval_ambitions: "Ambitions Navales Globales"
  global_naval_ambitions_desc: "Nos ambitions navales ne connaissent pas de limites. Notre objectif est global et nous ne serons pas arrêtés dans notre mouvement éventuel vers la domination navale."
  naval_force_projection: "Projection de Force Navale"
@@ -2323,7 +2323,7 @@
  very_large_gun_tech_3: "Canon de super char lourd avancé"
  very_large_gun_tech_3_desc: "Avec une accélération électromagnétique supplémentaire de l'obus, un canon de super char lourd sera capable de percer le blindage, les bâtiments et même les bunkers avec ses tirs."
  small_autocannon_tech: "Autocanon de la Guerre Froide précoce"
- small_autocannon_tech_desc: "Avec un calibre de 20-30mm, généralement juste un canon AA de la WW2 avec quelques modifications. Fait bien son travail, cependant."
+ small_autocannon_tech_desc: "With a caliber of 20-30mm, usually just straight up WW2 AA gun with a few modifications. Does its job well, though."
  small_autocannon_tech_2: "Autocanon de la fin de la Guerre Froide"
  small_autocannon_tech_2_desc: "Autocanon dédié conçu pour vaincre l'infanterie et le métal."
  small_autocannon_tech_3: "Autocanon moderne"
@@ -4208,7 +4208,7 @@
  advanced_unit_drones: "Advanced Drone Systems"
  advanced_unit_drones_desc: "Drone systems, with semi-autonomous decision making, will be able to augment squad level awareness, combat capability, and enemy detection.\n\n§RThis doctrine will cost 300bn on unlock§!"
  WOPR: "War Operation Plan Response"
- WOPR_desc: "The time has come. War Operation Plan Response is now live, and directly responsible for the majority of our military planning and operations, to include all nuclear arms. With mankind removed from the loop, the risk of bad decision making or dangerous accidents is compeltely removed.\n\n§RThis doctrine will cost 5000bn on unlock.§!"
+ WOPR_desc: "The time has come. War Operation Plan Response is now live, and directly responsible for the majority of our military planning and operations, to include all nuclear arms. With mankind removed from the loop, the risk of bad decision making or dangerous accidents is completely removed.\n\n§RThis doctrine will cost 5000bn on unlock.§!"
  blue_force_tracker: "Blue Force Tracker"
  blue_force_tracker_desc: "Utilizing advanced GPS systems, more portable computers, and enhanced electronic encryptions, our commanders can monitor the battlespace with real-time-data of friendly unit locations. \n\n §RThis doctrine will cost 100bn on unlock.§!"
  ai_assisted_planning: "AI Assisted Planning"
