--- a/localisation/french/MD_terrain_cities_l_french.yml
+++ b/localisation/french/MD_terrain_cities_l_french.yml
@@ -228,7 +228,7 @@
  terrain_genoa: "Genoa, Italy"
  terrain_rome: "Rome, Italy"
  terrain_naples: "Naples, Italy"
- terrain_vatican: "Vatican City"
+ terrain_vatican: "Vatican"
  terrain_palermo: "Palermo, Italy"
  terrain_cagilari: "Cagliari, Italy"
  terrain_torino: "Torino, Italy"
