--- a/localisation/french/MD_tooltips_l_french.yml
+++ b/localisation/french/MD_tooltips_l_french.yml
@@ -1,9 +1,9 @@
 ﻿l_french:
  TT_RIO_PACT: "§R[From.GetName] can call their Rio Pact allies to help them in the war§!\n"
  TT_CALL_NATO: "§R[From.GetName] can call their NATO allies to help them in the war§!\n"
- TT_JOIN_NATO: "We join NATO"
- TT_LEAVE_NATO: "We leave NATO"
- TT_NATO_DISBANDED: "NATO faction is disbanded"
+ TT_JOIN_NATO: "Nous rejoignons l'OTAN"
+ TT_LEAVE_NATO: "Nous quittons l'OTAN"
+ TT_NATO_DISBANDED: "La faction de l'OTAN est dissoute"
  TT_NO_MILITARY_INTERNAL_FACTION: "§HThe Military§! is not one of our active §HInternal Factions§!"
  TT_AT_LEAST_SMALL_MILITARY_SPENDING: "We need to have at least §HSmall Military Spending§!"
  TT_AT_LEAST_BASIC_POLICE: "We need to have at least §HBasic Police and Security Funding§!"
@@ -490,7 +490,7 @@
  unasur_must_control_tt: "Every country in Unasur must:\n - Have compatible Outlooks §YOR§! \n - Be in the same alliance §YOR§! \n - Be puppets of Brazil. \n"
  mercosur_must_control_tt: "Every country in Mercosur must:\n - Have compatible Outlooks §YOR§! \n - Be in the same alliance §YOR§! \n - Be puppets of Brazil. \n"
  form_unasur_tt: "§YForm the Unasur Federation!§!\n"
- form_mercosur_tt: "§YForm the Mercosur Federation!§! n"
+ form_mercosur_tt: "§YForm the Mercosur Federation!§!\n"
  common_market: "Common Market"
  consumption_economy_TT: "Resources to Market: §Y0%§!\n"
  reset_internal_faction_opinion: "Will reset all internal faction opinions.\n"
