--- a/localisation/french/plane_designer_l_french.yml
+++ b/localisation/french/plane_designer_l_french.yml
@@ -163,9 +163,9 @@
  stealth_tech_1_desc: "Responsable du développement du premier poteau furtif au monde, cette génération de recherche et développement d'avions a inauguré l'ère de la faible observabilité et des avions furtifs, capables de mener des frappes sur l'ennemi sans jamais être détectés."
  stealth_tech_2: "Furtivité du futur proche"
  stealth_tech_2_desc: "Alors que la technologie radar devenait de plus en plus avancée et que les anciennes techniques devenaient moins efficaces, des avancées supplémentaires des matériaux furtifs et des principes de conception des avions étaient nécessaires."
- internal_weapons_1: "Early Internal Weapons"
+ internal_weapons_1: "Premières armes internes"
  internal_weapons_1_desc: "Dans une tentative d'augmenter encore les capacités furtives des avions, les concepteurs ont trouvé des moyens de stocker les armes d'un avion à l'intérieur du corps de la cellule, augmentant ainsi la furtivité de l'avion."
- internal_weapons_2: "Modern Internal Weapons"
+ internal_weapons_2: "Armes internes modernes"
  internal_weapons_2_desc: "Suite aux plaintes des pilotes de chasseurs concernant l'impossibilité de transporter de grandes quantités d'armement, en raison des limites de taille de leurs soutes internes, les concepteurs se sont efforcés de rendre ces soutes encore plus grandes, afin d'augmenter encore les capacités de charge utile."
  redundant_1: "Technologies de protection 1"
  redundant_1_desc: "Les redondances dans les systèmes de commande de vol électriques et autres systèmes électriques rendent les avions plus fiables. De plus, le développement précoce de matériaux auto-réparateurs rend un avion plus résistant aux dommages."
@@ -706,8 +706,8 @@
  avionics_drone_quadcopter: "Quadcopter Drone Systems"
  avionics_drone_quadcopter_desc: "Your typical walmart drone, just being repurposed for more aggressive means."
  wing_quadcopter: "Quadcopter Structure"
- wing_quadcopter_desc: "A drone design, used to make extremely cheap and reliable drones for use in mass amounts."
- weap_int_ag_strat_2: "Internal Bomb Bay"
+ wing_quadcopter_desc: "Une conception de drone, utilisée pour fabriquer des drones extrêmement bon marché et fiables destinés à être utilisés en grande quantité."
+ weap_int_ag_strat_2: "Baie à bombes interne"
  weap_int_ag_strat_2_desc: "Internal bomb bay, increasing the stealth capabilities of aircraft, while also allowing them to carry a volume of ordinance.\n\n§GDesigner Hint: This module will allow you to build stealth bombers, increasing their radar advantage while also allowing them to have strategic bombing capability.§!\n\n§WUsing as the primary weapon will create a§! §BStrategic Bomber§!"
  weap_int_mp_light_hardpoint_2: "1st Gen Internal Light Hardpoint"
  weap_int_mp_light_hardpoint_2_desc: "Internal light hardpoints allow an aircraft to carry a mix of weapons on internal bays, increasing their stealth capability. These hardpoints are cheap and are meant to either equip light aircraft with some weapons, or to help supplement ordinance on other aircraft. Short Range Air-to-Air missiles, 250-500lb bombs, and rocket pods are the weapons equiped on these hardpoints.\n\n§GDesigner Hint: These hardpoints are meant to allow nations to build stealth aircraft with light weapons capabilities, perfect for nations building on a budget.§!\n\n§WUsing this as the primary weapon will create a§! §BMulti-Role Fighter§!\n\n§RWARNING: CV Multi-Role Fighters will only attack enemy ships during naval combat§!"
