--- a/localisation/french/victory_points_l_french.yml
+++ b/localisation/french/victory_points_l_french.yml
@@ -4221,7 +4221,7 @@
  VICTORY_POINTS_13302: "Comrat"
  VICTORY_POINTS_13274: "Penghu"
  VICTORY_POINTS_13275: "Jincheng"
- VICTORY_POINTS_13276: "Vatican City"
+ VICTORY_POINTS_13276: "Vatican"
  VICTORY_POINTS_13278: "Sidon"
  VICTORY_POINTS_10777: "Borama"
  VICTORY_POINTS_13279: "Zanzibar"
