--- a/localisation/french/MD_focus_ITA_l_french.yml
+++ b/localisation/french/MD_focus_ITA_l_french.yml
@@ -709,7 +709,7 @@
  ITA_our_savoie: "Reclaim Savoy"
  ITA_our_savoie_desc: "Savoy was unlawfully given to the French when we needed their help against the Austrians during Risorgimento."
  ITA_our_corsica: "Reclaim Corsica"
- ITA_our_corsica_desc: "Corsica is geographically Italian and was ruled by Genoa for countless centuries, it's time to finally compelte the unification of our home region."
+ ITA_our_corsica_desc: "Corsica is geographically Italian and was ruled by Genoa for countless centuries, it's time to finally complete the unification of our home region."
  ITA_our_nizza: "Reclaim Nice"
  ITA_our_nizza_desc: "Nice was foolishly ceded to France along with Savoy during Risorgimento. It's time to to recover it to finally ocmplete our unification."
  ITA_recover_balkans: "Recover the Balkan Area"
@@ -1373,7 +1373,7 @@
  italy_md.13.o1: "Education"
  italy_md.13.o2: "Healthcare"
  italy_md.13.o3: "Welfare"
- italy_md.14.t: "Italian mechanics pt.2"
+ italy_md.14.t: "Mécaniques italiennes pt.2"
  italy_md.14.d: "To access this tutorial again use the command \"event italy.md23\" in the console. \n \n Italian Content by Simone - Traiano \n Collaborators: Mik; Zebrone"
  italy_md.14.o1: "Space Decisions and Military Branch"
  italy_md.14.o2: "Weekly Stability"
@@ -1406,7 +1406,7 @@
  italy_md.22.d: "To represent Italian political instability, one of the main features of the new content given to Italy is the \"Reform Expectance\" dynamic modifier. Parties in the ruling coalition will see their popularity rapidly deteriorate unless policies that satisfy the population are enacted. If a coalition member sees its popularity drop below half of the value it was elected with it will leave the coalition. If the coalition loses too much popularity a government crisis will be triggered that can be resolved with new elections or by trying to keep the government alive at the expense of stability. The amount of reform expectance is affected by focuses, events and decisions but it's not static. Depending on your laws, tax level, interest rate and stability reform expectance will shift to higher or lower levels. Having a technocratic government will also increase reform expectance over time and increase the political power cost of reforms."
  italy_md.22.o1: "Back to list of mechanics."
  italy_md.22.o2: "Enough explanations."
- italy_md.23.t: "Italian mechanics"
+ italy_md.23.t: "Mécaniques italiennes"
  italy_md.23.d: "Some new mechanics have been added to Italy, in this short tutorial you can read more detailed descriptions of their functioning."
  italy_md.23.o1: "Reform Expectance"
  italy_md.23.o2: "§tMafia§!"
@@ -2196,7 +2196,7 @@
  lsp_snap_election: "Call a Snap Election"
  generic_ITA: "Italy Decisions"
  generic_ITA_desc: "Many decisions of this category are recurring, their effect stays the same but their cost increases permanently every time they are taken."
- ITA_tutorial_decision: "Italian Mechanics Tutorial"
+ ITA_tutorial_decision: "Tutoriel sur les mécaniques italiennes"
  policies_ITA: "Italian Policies"
  policies_ITA_desc: "Several policies can be unlocked through focuses and can be activated here. While policies can only be enacted by specific parties, there is no obligation to repel them once the original party has lost power, unless you want to enact diametrically opposed policies of course."
  bonus_to_stimulate_consumption: "Bonus to \"Stimulate Consumption\""
