--- a/localisation/french/MD_subideology_parties_l_french.yml
+++ b/localisation/french/MD_subideology_parties_l_french.yml
@@ -5283,27 +5283,27 @@
  GUY.oligarchism: "£GUY_non_aligned_oligarchism Agricola-Buxton Gang (ABG)"
  GUY.oligarchism_icon: "£GUY_non_aligned_oligarchism"
  GUY.oligarchism_desc: ""
- HAI.conservatism: "£generic_conservatism_small RDNP - Rassemblement des Démocrates Nationaux Progressistes"
+ HAI.conservatism: "£HAI_western_conservatives RDNP - Rassemblement des Démocrates Nationaux Progressistes"
  HAI.conservatism_desc: "Christian Democracy - Rassemblement des Démocrates Nationaux Progressistes (or Rally of Progressive National Democrats in English) is one of the oldest extant political parties in Haiti, founded in 1979, they were permitted to stand in elections in 1987 shortly after the fall of the second Duvalier regime.\n\nThey are a member of the Centrist Democrat International and of the Christian Democrat Organization of America."
- HAI.liberalism: "£generic_liberalism_small PHTK - Pati Ayisyen Tèt Kale"
+ HAI.liberalism: "£HAI_western_liberalism PHTK - Pati Ayisyen Tèt Kale"
  HAI.liberalism_desc: "Liberalism - Pati Ayisyen Tèt Kale (or Haitian Bald Headed Party in English) is a liberal party who split off of RP in August 2012. Though Michel Martelly was never a member of the PHTK, they maintained close ties with the RP party."
- HAI.socialism: "£generic_socialism_small FL - Fanmi Lavalas"
+ HAI.socialism: "£HAI_western_socialism FL - Fanmi Lavalas"
  HAI.socialism_desc: "Social Democratic Populism - Fanmi Lavalas (or Lavalas Family in English) is a party named after the Lavalas political movement popularised by the 1990 presidential campaign of Jean-Bertran Aristide, officially splitting from the Òganizasyon Pèp k ap Lite (OPL) in 1996.\n\nThe party is well known for maintaining a policy of \"growth and equity\", seeking Western European social democratic principles whilst refusing the IMF's wishes to implement austerity measures."
- HAI.Communist-State: "£generic_Communist_State_small NPCH(ML) - Nouveau Parti Communiste Haïtien (Marxiste-Léniniste)"
+ HAI.Communist-State: "£HAI_communist_state NPCH(ML) - Nouveau Parti Communiste Haïtien (Marxiste-Léniniste)"
  HAI.Communist-State_desc: "Marxist-Leninist Communism - Nouveau Parti Communiste Haïtien (Marxiste-Léniniste) (or New Haitian Communist Party (Marxist-Leninist) in English) is a party formed in 2000, the party hosts a general mixture of Marxist-Leninists, Maoists and Stalinists.\n\nThey are widely regarded as anti-revisionist, and are the ideological descendants of Parti Unifié des Communistes Haïtiens, a former communist party repressed and eventually exiled under the reign of both François \"Papa Doc\" Duvalier and his son Jean-Claude \"Baby Doc\" Duvalier."
- HAI.anarchist_communism: "£generic_anarchist_communism_small PPD - Platfòm Pitit Desalin"
+ HAI.anarchist_communism: "£HAI_anarchist_communists PPD - Platfòm Pitit Desalin"
  HAI.anarchist_communism_desc: "Dessalinism - Platfòm Pitit Desalin (or Child of Dessalines Platform in English) is a democratic socialist party founded in December 2014 and is influenced heavily by broad Dessalinist economic principles.\n\nThe party takes its name after the first ruler of Haiti post revolution, Jean-Jacques Dessalines (Jan-Jak Desalin in Haitian), after banning slavery permanently, Desalin put all production and processing of cash crops under control of the new Haitian government, engaging in highly protectionist policies to protect Haitian economic interests. He was generally not against foreign investments, just those from France."
- HAI.Neutral_conservatism: "£generic_Neutral_conservatism_small MCNH - Mouvement Chrétien pour une Nouvelle Haïti"
+ HAI.Neutral_conservatism: "£HAI_neutral_conservatives MCNH - Mouvement Chrétien pour une Nouvelle Haïti"
  HAI.Neutral_conservatism_desc: "Christian Democracy - Mouvement Chrétien pour une Nouvelle Haïti (or Christian Movement for a New Haiti in English) is a center right Christian democratic party, it was founded in 1991 by a conglomeration of Evangelical Protestant churches within Haiti.\n\nIt took until 1999 before electoral authorities recognised the party as an official election candidate."
- HAI.Neutral_green: "£generic_Neutral_green_small RP - Repons Peyizan"
+ HAI.Neutral_green: "£HAI_neutral_green RP - Repons Peyizan"
  HAI.Neutral_green_desc: "Agrarianism - Repons Peyizan (or Peasant Response in English) is a party founded in July 2010 as a response to the earthquake that devastated the nation that year. Its founding was thanks to Michel Martelly, a Kompa musician better known by his stage name of Sweet Micky who officially joined the political sphere after hardship following the disaster caused conditions in the nation to worsen."
- HAI.neutral_Social: "£generic_neutral_Social_small OPL - Òganizasyon Pèp k ap Lite"
+ HAI.neutral_Social: "£HAI_neutral_socialist OPL - Òganizasyon Pèp k ap Lite"
  HAI.neutral_Social_desc: "Social Democratic - Òganizasyon Pèp k ap Lite (or Struggling People's Organization in English) is a political party founded in 1991 during the Lavalas movement.\n\nWhilst the party falls under the social democracy umbrella, they support privatisation and economic austerity measures as a way to revitalise the ailing Haitian economy, leading to the OPL and FL splitting ideologically in 1996."
- HAI.Nat_Populism: "£generic_Nat_Populism_small AAA - Ayiti an Aksyon"
+ HAI.Nat_Populism: "£HAI_nationalist_populism AAA - Ayiti an Aksyon"
  HAI.Nat_Populism_desc: "Federalist Nationalism - Ayiti an Aksyon (or Haiti in Action in English) is simultaneously a nationalist and federalist party. Founded in 2005, it sought to achieve regionalist control and self determination for the Latibonit department, the party began pushing for decentralisation and federalism as a whole shortly after."
- HAI.Nat_Fascism: "£generic_Nat_Fascism_small PUN - Parti de l'Unité Nationale"
+ HAI.Nat_Fascism: "£HAI_nationalist_fascism PUN - Parti de l'Unité Nationale"
  HAI.Nat_Fascism_desc: "Totalitarianist Black Nationalism - Parti de l'Unité Nationale (or National Unity Party in English) is a party originally founded in 1957 as an anti-American and Haitian nationalist party under François \"Papa Doc\" Duvalier.\n\nAs the reign of Papa Doc went on, the party became more and more authoritarian, utilising their fearsome Tonton Macoute to crush any and all opposition. Papa Doc Duvalier once used the Tonton Macoute to seek and kill all black dogs, believing the former leader of the Tonton Macoute Clément Barbot had transformed himself into a black dog."
- HAI.Nat_Autocracy: "£generic_Nat_Autocracy_small FAd'H - Forces Armées d'Haïti"
+ HAI.Nat_Autocracy: "£HAI_nationalist_junta FAd'H - Forces Armées d'Haïti"
  HAI.Nat_Autocracy_desc: "Military Rule - Forces Armées d'Haïti (or Armed Forces of Haiti in English) is the official title of the Haitian military, it was suspended and subsequently disbanded in 1995 due to the prevalence of coups and coup attempts from within the military high command."
  HEZ.Vilayat_e_Faqih: "£generic_Vilayat_e_Faqih_small Hezbollah"
  HEZ.Vilayat_e_Faqih_desc: ""
@@ -7542,11 +7542,11 @@
  WAS.Communist-State: "£generic_Communist_State_small CG - Cymru Goch"
  WAS.Communist-State_desc: "Socialism - Red Wales"
  WAS.anarchist_communism: "£generic_anarchist_communism_small SLP - Socialist Labour Party"
- WAS.anarchist_communism_desc: "Socialism"
+ WAS.anarchist_communism_desc: "Socialisme"
  WAS.Neutral_conservatism: "£generic_Neutral_conservatism_small G - Gwlad"
  WAS.Neutral_conservatism_desc: ""
  WAS.Neutral_green: "£generic_Neutral_green_small PWC - Plaid Werdd Cymru"
- WAS.Neutral_green_desc: "Green - Wales Green Party"
+ WAS.Neutral_green_desc: "Green - Wales Parti vert"
  WAS.Neutral_Communism: "£generic_Neutral_Communism_small PSC - Plaid Sosialaidd Cymru"
  WAS.Neutral_Communism_desc: "Trotskyist - Socialist Party Wales"
  WAS.Nat_Populism: "£generic_Nat_Populism_small PDCC - Plaid Diddymu Cynulliad Cymru"
@@ -7967,7 +7967,7 @@
  ESB.liberalism_icon: "£FAR_western_liberalism"
  ESB.socialism: "£FAR_western_socialism Narodno-Democraticheskiy Soyuz"
  ESB.socialism_icon: "£FAR_western_socialism"
- ESB.Communist-State: "£FAR_communiststate Kommunisticheskaya Partiya Sibiri"
+ ESB.Communist-State: "£FAR_communist-state Kommunisticheskaya Partiya Sibiri"
  ESB.Communist-State_icon: "£FAR_communist-state"
  ESB.anarchist_communism: "£FAR_anarchist_communism Sotsialisticheskaya Al'ternativa"
  ESB.anarchist_communism_icon: "£FAR_anarchist_communism"
@@ -8070,3 +8070,14 @@
  RUS.Nat_Populism_icon: "£RUS_nationalist_populism"
  RUS.Nat_Autocracy: "£RUS_military_junta Russian Volunteer Corps"
  RUS.Nat_Autocracy_icon: "£RUS_military_junta"
+ HAI.conservatism_icon: "£HAI_western_conservatives"
+ HAI.liberalism_icon: "£HAI_western_liberalism"
+ HAI.socialism_icon: "£HAI_western_socialism"
+ HAI.Communist-State_icon: "£HAI_communist_state"
+ HAI.anarchist_communism_icon: "£HAI_anarchist_communists"
+ HAI.Neutral_conservatism_icon: "£HAI_neutral_conservatives"
+ HAI.Neutral_green_icon: "£HAI_neutral_green"
+ HAI.neutral_Social_icon: "£HAI_neutral_socialist"
+ HAI.Nat_Populism_icon: "£HAI_nationalist_populism"
+ HAI.Nat_Fascism_icon: "£HAI_nationalist_fascism"
+ HAI.Nat_Autocracy_icon: "£HAI_nationalist_junta"
