--- a/localisation/french/ledger_l_french.yml
+++ b/localisation/french/ledger_l_french.yml
@@ -40,7 +40,7 @@
  LEDGER_DEBT: "Dette"
  LEDGER_DEBT_TT: "[THIS.GetNameWithFlag] a une dette évaluée à $[?THIS.debt|-]b. Ils paient actuellement [?debt_rate|-] $ d'intérêts chaque semaine, avec un taux d'intérêt de [?interest_rate]%."
  LEDGER_TREASURY: "Trésorerie"
- LEDGER_TREASURY_TT: "[THIS.GetNameWithFlag] possède un trésor évalué à $$[?THIS.tresury|+]b. Actuellement, ils gagnent $[?THIS.treasury_rate|+]b chaque semaine, après prise en compte des dépenses. Ils possèdent également des §YInvestissements Internationaux§! d'une valeur de $[?THIS.int_investments|+]b, qui à leur tour leur rapportent $[?int_investments_rate|+]b par semaine.\n"
+ LEDGER_TREASURY_TT: "[THIS.GetNameWithFlag] dispose d'un trésor évalué à [?THIS.tresury|+] milliards de $. Ses revenus hebdomadaires s'élèvent actuellement à [?THIS.treasury_rate|+] milliards de $ , après prise en compte des dépenses. Le pays possède également des §YInvestissements Internationaux§! d'une valeur de [?THIS.int_investments|+] milliards de $, qui à leur tour rapportent [?int_investments_rate|+] milliards de $ par semaine.\n"
  LEDGER_GROSS_INCOME: "Revenu brut"
  LEDGER_INCOME_TT: "§CRevenu de la population :§! $§G[?population_tax|+3]§!\n§LRevenu des entreprises :§! $§G[?corporate_tax|+3]§!\n§GInvestissements internationaux :§! $§G[?int_investments_rate|+3]§!\n§UExportations de ressources :§! $§G[?resource_sale_rate|+3]§!\n§HRevenus supplémentaires :§! $§G[?additional_income_rate|+3]§!\n\nRevenu brut : $§G[?display_income]§!"
  LEDGER_TOTAL_EXPENSE: "Dépenses totales"
