--- a/localisation/french/replace/replaced_from_vanilla_countries_cosmetic_l_french.yml
+++ b/localisation/french/replace/replaced_from_vanilla_countries_cosmetic_l_french.yml
@@ -9,3 +9,4 @@
  GNA_subject:0 "$OVERLORDADJ$ Libye"
  CAM_subject:0 "$OVERLORDADJ$ Cameroun"
  SIK_subject:0 ""
+ MAN_subject:0 "$OVERLORDADJ$ Manipur"
