--- a/localisation/french/replace/replaced_from_vanilla_modifiers_l_french.yml
+++ b/localisation/french/replace/replaced_from_vanilla_modifiers_l_french.yml
@@ -1,5 +1,5 @@
 ﻿l_french:
- MODIFIER_PRODUCTION_SPEED_BUILDINGS_FACTOR: "£construction_speed_texticon Vitesse de Construction"
+ MODIFIER_PRODUCTION_SPEED_BUILDINGS_FACTOR: "£construction_speed_texticon Vitesse de construction"
  modifier_production_speed_fossil_powerplant_factor: "£construction_speed_texticon Vitesse de Construction de §Y$fossil_powerplant$§!"
  MODIFIER_LOCAL_BUILDING_SLOTS: "£civ_factory Industries Max dans l'État"
  MODIFIER_LOCAL_FACTORIES: "£civ_factory Industries Locales"
@@ -64,7 +64,7 @@
  MODIFIER_AIRFORCE_INTEL_DECRYPTION_BONUS: "Bonus d'accès par porte dérobée de l'armée de l'air : $VALUE$"
  MODIFIER_DECRYPTION_POWER: "£crypto£ Capacité de piratage"
  MODIFIER_DECRYPTION_POWER_FACTOR: "£crypto£ Facteur de capacité de piratage"
- foreign_influence_defense_modifier: "£foreign_influence_defense_modifier_texticon §YDéfense contre l'influence étrangère§!Multiplicateur"
+ foreign_influence_defense_modifier: "£foreign_influence_defense_modifier_texticon Multiplicateur de §Ydéfense contre l'influence étrangère§!"
  foreign_influence_defense_modifier_desc: "$foreign_influence_defense_modifier$ est un modificateur qui affaiblit les actions d'influence étrangère dans notre nation."
  foreign_influence_modifier: "£foreign_influence_modifier_texticon §YInfluence étrangère§!Multiplicateur"
  influence_coup_modifier: "£foreign_influence_auto_influence_cap_modifier_texticon  §YInfluence étrangère§! Facteur de succès du coup d'État"
@@ -82,9 +82,9 @@
  equipment_cost_multiplier_modifier: "£equipment_cost_multiplier_modifier_texticon §YCoût de l'équipement§!Multiplicateur"
  bureaucracy_cost_multiplier_modifier: "£bureaucracy_cost_multiplier_modifier_texticon §YCoût de la bureaucratie§!Multiplicateur"
  police_cost_multiplier_modifier: "£police_cost_multiplier_modifier_texticon §YCoût de la police§!Multiplicateur"
- education_cost_multiplier_modifier: "£education_cost_multiplier_modifier_texticon §YCoût de l'éducation§!Multiplicateur"
- health_cost_multiplier_modifier: "£health_cost_multiplier_modifier_texticon §YCoût de la santé§!Multiplicateur"
- social_cost_multiplier_modifier: "£social_cost_multiplier_modifier_texticon §YCoût des dépenses sociales§!Multiplicateur"
+ education_cost_multiplier_modifier: "£education_cost_multiplier_modifier_texticon  Multiplicateur du §Ycoût de l'éducation§!"
+ health_cost_multiplier_modifier: "£health_cost_multiplier_modifier_texticon Multiplicateur des §Ycoûts de santé§!"
+ social_cost_multiplier_modifier: "£social_cost_multiplier_modifier_texticon  Multiplicateur du §Ycoût de dépenses sociales§!"
  resource_export_multiplier_modifier: "£resource_export_multiplier_modifier_texticon §YRevenus des exportations de ressources§!Multiplicateur"
  oil_export_multiplier_modifier: "£resource_export_multiplier_modifier_texticon §YRevenus des exportations de combustibles fossiles§!Multiplicateur"
  steel_export_multiplier_modifier: "£resource_export_multiplier_modifier_texticon §YRevenus des exportations d'acier§!Multiplicateur"
@@ -2160,7 +2160,7 @@
  modifier_production_speed_agriculture_district_factor: "£construction_speed_texticon §Y$agriculture_district$§! Vitesse de construction"
  agriculture_district_worker_requirement_modifier: "Travailleurs recherchés dans §YL'agriculture commercialisée§!"
  agriculture_district_income_tax_modifier: "£corporate_tax_income_multiplier_modifier_texticon §Y$agriculture_district$§! Tax Revenue Multiplier"
- border_control_multiplier_modifier: "§YMigration Control Cost§! Multiplier"
- maximum_migration_rate_value: "Maximum §YMigration Rate§! Value"
- base_migration_rate_value: "Base §YMigration Rate§! Value"
- migration_rate_value_factor: "§YMigration Rate§! Value Factor"
+ border_control_multiplier_modifier: "§YCoût du contrôle des migrations§!Multiplicateur"
+ maximum_migration_rate_value: "§YTaux de migration§!maximum Valeur"
+ base_migration_rate_value: "Base §YTaux de migration net§!"
+ migration_rate_value_factor: "§YTaux de migration net§!Facteur de valeur"
