Fix Overlord Military Factory Energy and Defense Cost Calculations

--- a/Changelog.txt
+++ b/Changelog.txt
@@ -78,6 +78,8 @@ v1.10.2
   - Fixed a number of provincial errors in various focus trees
   - Fixed a division template being created after a unit creation in the Central Asian tree
   - Fixed Egyptian Helicopter Operator purchase from France causing crashes
+  - Fixed visual issue in Economic Preview menu where it included subject military factories.
+  - Fixed energy and defense cost calculation to not include subject military factories for the overlord.
 
  Content:
   - New building "Commercialized Agriculture District"
