--- a/localisation/french/countries_l_french.yml
+++ b/localisation/french/countries_l_french.yml
@@ -5455,9 +5455,9 @@
  USB_Arcadia: "Royaumes Unifiés d'Arcadie"
  USB_MidAtlantic_States: "Union Fédérale Centre-Atlantique"
  USB_MidAtlantic_Union: "Union militaire Centre-Atlantique"
- USB_second_american_republic: "la Deuxième République américaine"
+ USB_second_american_republic: "Deuxième République américaine"
  USB_UFSR: "Union des Républiques Socialistes Libres"
- ARC_fascism: "le Califat Arcadien"
+ ARC_fascism: "Califat Arcadien"
  ARC_fascism_DEF: "le Califat Arcadien"
  ARC_democratic: "Arcadie"
  ARC_democratic_DEF: "l'Arcadie"
