--- a/localisation/french/MD_countries_cosmetic_l_french.yml
+++ b/localisation/french/MD_countries_cosmetic_l_french.yml
@@ -271,49 +271,49 @@
  KAC_federation_nationalist: "État Kachin"
  KAC_federation_nationalist_DEF: "Kachin State"
  KAC_federation_nationalist_ADJ: "Kachin"
- SHN_federation_fascism: "South Shan State"
+ SHN_federation_fascism: "État Shan du Sud"
  SHN_federation_fascism_DEF: "South Shan State"
- SHN_federation_democratic: "South Shan State"
+ SHN_federation_democratic: "État Shan du Sud"
  SHN_federation_democratic_DEF: "South Shan State"
- SHN_federation_neutrality: "South Shan State"
+ SHN_federation_neutrality: "État Shan du Sud"
  SHN_federation_neutrality_DEF: "South Shan State"
- SHN_federation_communism: "South Shan State"
+ SHN_federation_communism: "État Shan du Sud"
  SHN_federation_communism_DEF: "South Shan State"
  SHN_federation_fascism_ADJ: "South Shan"
  SHN_federation_democratic_ADJ: "South Shan"
  SHN_federation_neutrality_ADJ: "South Shan"
  SHN_federation_communism_ADJ: "South Shan"
- SHN_federation_nationalist: "South Shan State"
+ SHN_federation_nationalist: "État Shan du Sud"
  SHN_federation_nationalist_DEF: "South Shan State"
  SHN_federation_nationalist_ADJ: "South Shan"
- NHN_federation_fascism: "North Shan State"
+ NHN_federation_fascism: "État Shan du Nord"
  NHN_federation_fascism_DEF: "North Shan State"
- NHN_federation_democratic: "North Shan State"
+ NHN_federation_democratic: "État Shan du Nord"
  NHN_federation_democratic_DEF: "North Shan State"
- NHN_federation_neutrality: "North Shan State"
+ NHN_federation_neutrality: "État Shan du Nord"
  NHN_federation_neutrality_DEF: "North Shan State"
- NHN_federation_communism: "North Shan State"
+ NHN_federation_communism: "État Shan du Nord"
  NHN_federation_communism_DEF: "North Shan State"
  NHN_federation_fascism_ADJ: "North Shan"
  NHN_federation_democratic_ADJ: "North Shan"
  NHN_federation_neutrality_ADJ: "North Shan"
  NHN_federation_communism_ADJ: "North Shan"
- NHN_federation_nationalist: "North Shan State"
+ NHN_federation_nationalist: "État Shan du Nord"
  NHN_federation_nationalist_DEF: "North Shan State"
  NHN_federation_nationalist_ADJ: "North Shan"
- WAA_federation_fascism: "Wa State"
+ WAA_federation_fascism: "État Wa"
  WAA_federation_fascism_DEF: "Wa State"
- WAA_federation_democratic: "Wa State"
+ WAA_federation_democratic: "État Wa"
  WAA_federation_democratic_DEF: "Wa State"
- WAA_federation_neutrality: "Wa State"
+ WAA_federation_neutrality: "État Wa"
  WAA_federation_neutrality_DEF: "Wa State"
- WAA_federation_communism: "Wa State"
+ WAA_federation_communism: "État Wa"
  WAA_federation_communism_DEF: "Wa State"
  WAA_federation_fascism_ADJ: "wa"
  WAA_federation_democratic_ADJ: "wa"
  WAA_federation_neutrality_ADJ: "wa"
  WAA_federation_communism_ADJ: "wa"
- WAA_federation_nationalist: "Wa State"
+ WAA_federation_nationalist: "État Wa"
  WAA_federation_nationalist_DEF: "Wa State"
  WAA_federation_nationalist_ADJ: "wa"
  TAI_TAIWAN_fascism: "Taïwan"
@@ -331,10 +331,10 @@
  TAI_TAIWAN_nationalist: "Taïwan"
  TAI_TAIWAN_nationalist_DEF: "Taïwan"
  TAI_TAIWAN_nationalist_ADJ: "taïwanais"
- TAI_autonomy_special_administrative_region: "Taiwan S.A.R."
+ TAI_autonomy_special_administrative_region: "RAS de Taïwan"
  TAI_autonomy_special_administrative_region_DEF: "the Taiwan S.A.R."
  TAI_autonomy_special_administrative_region_ADJ: "taïwanais"
- TIB_autonomy_special_administrative_region: "RAS du Xizang"
+ TIB_autonomy_special_administrative_region: "RAS du Tibet"
  TIB_autonomy_special_administrative_region_DEF: "la RAS du Xizang"
  TIB_autonomy_special_administrative_region_ADJ: "tibétain"
  ETK_autonomy_special_administrative_region: "RAS du Xinjiang"
@@ -349,31 +349,31 @@
  MON_autonomy_special_administrative_region: "RAS de Mongolie-Extérieure"
  MON_autonomy_special_administrative_region_DEF: "la RAS de Mongolie-Extérieure"
  MON_autonomy_special_administrative_region_ADJ: "mongol-extérieur"
- KOR_REB_S_fascism: "Korean National Liberation Movement"
+ KOR_REB_S_fascism: "Mouvement de Libération Nationale Coréen"
  KOR_REB_S_fascism_DEF: "the Korean National Liberation Movement"
  KOR_REB_S_fascism_ADJ: "Korean rebel"
- KOR_REB_S_democratic: "Korean National Liberation Movement"
+ KOR_REB_S_democratic: "Mouvement de Libération Nationale Coréen"
  KOR_REB_S_democratic_DEF: "the Korean National Liberation Movement"
  KOR_REB_S_democratic_ADJ: "Korean rebel"
- KOR_REB_S_neutrality: "Korean National Liberation Movement"
+ KOR_REB_S_neutrality: "Mouvement de Libération Nationale Coréen"
  KOR_REB_S_neutrality_DEF: "the Korean National Liberation Movement"
  KOR_REB_S_neutrality_ADJ: "Korean rebel"
- KOR_REB_S_communism: "Korean National Liberation Movement"
+ KOR_REB_S_communism: "Mouvement de Libération Nationale Coréen"
  KOR_REB_S_communism_DEF: "the Korean National Liberation Movement"
  KOR_REB_S_communism_ADJ: "Korean rebel"
- KOR_REB_S_nationalist: "Korean National Liberation Movement"
+ KOR_REB_S_nationalist: "Mouvement de Libération Nationale Coréen"
  KOR_REB_S_nationalist_DEF: "the Korean National Liberation Movement"
  KOR_REB_S_nationalist_ADJ: "Korean rebel"
- POL_LIT: "Polish-Lithuanian Commonwealth"
- POL_QUAD: "United Visegrad State"
- POL_LIT_QUAD: "Polish European Federation"
- BHR_REP_fascism: "Islamic Republic of Bahrain"
+ POL_LIT: "République des Deux Nations"
+ POL_QUAD: "État uni de Visegrad"
+ POL_LIT_QUAD: "Fédération européenne polonaise"
+ BHR_REP_fascism: "République islamique de Bahreïn"
  BHR_REP_fascism_DEF: "the Islamic Republic of Bahrain"
  BHR_REP_democratic: "République de Bahreïn"
  BHR_REP_democratic_DEF: "la République de Bahreïn"
  BHR_REP_neutrality: "Bahreïn"
  BHR_REP_neutrality_DEF: "the Islamic Republic of Bahrain"
- BHR_REP_communism: "Islamic Republic of Bahrain"
+ BHR_REP_communism: "République islamique de Bahreïn"
  BHR_REP_communism_DEF: "the Islamic Republic of Bahrain"
  BHR_REP_fascism_ADJ: "bahreïnien"
  BHR_REP_democratic_ADJ: "bahreïnien"
@@ -382,34 +382,34 @@
  BHR_REP_nationalist: "République de Bahreïn"
  BHR_REP_nationalist_DEF: "la République de Bahreïn"
  BHR_REP_nationalist_ADJ: "bahreïnien"
- KUW_REP_fascism: "Islamic Republic of Kuwait"
+ KUW_REP_fascism: "République islamique du Koweït"
  KUW_REP_fascism_DEF: "the Islamic Republic of Kuwait"
- KUW_REP_democratic: "Republic of Kuwait"
+ KUW_REP_democratic: "République du Koweït"
  KUW_REP_democratic_DEF: "the Republic of Kuwait"
- KUW_REP_neutrality: "Islamic Republic of Kuwait"
+ KUW_REP_neutrality: "République islamique du Koweït"
  KUW_REP_neutrality_DEF: "the Islamic Republic of Kuwait"
- KUW_REP_communism: "Islamic Republic of Kuwait"
+ KUW_REP_communism: "République islamique du Koweït"
  KUW_REP_communism_DEF: "the Islamic Republic of Kuwait"
  KUW_REP_fascism_ADJ: "koweïtien"
  KUW_REP_democratic_ADJ: "koweïtien"
  KUW_REP_neutrality_ADJ: "koweïtien"
  KUW_REP_communism_ADJ: "koweïtien"
- KUW_REP_nationalist: "Republic of Kuwait"
+ KUW_REP_nationalist: "République du Koweït"
  KUW_REP_nationalist_DEF: "the Republic of Kuwait"
  KUW_REP_nationalist_ADJ: "koweïtien"
- OMA_REP_fascism: "Islamic Republic of Oman"
+ OMA_REP_fascism: "République islamique d'Oman"
  OMA_REP_fascism_DEF: "the Islamic Republic of Oman"
- OMA_REP_democratic: "Republic of Oman"
+ OMA_REP_democratic: "République d'Oman"
  OMA_REP_democratic_DEF: "the Republic of Oman"
- OMA_REP_neutrality: "Islamic Republic of Oman"
+ OMA_REP_neutrality: "République islamique d'Oman"
  OMA_REP_neutrality_DEF: "the Islamic Republic of Oman"
- OMA_REP_communism: "Islamic Republic of Oman"
+ OMA_REP_communism: "République islamique d'Oman"
  OMA_REP_communism_DEF: "the Islamic Republic of Oman"
  OMA_REP_fascism_ADJ: "omanais"
  OMA_REP_democratic_ADJ: "omanais"
  OMA_REP_neutrality_ADJ: "omanais"
  OMA_REP_communism_ADJ: "omanais"
- OMA_REP_nationalist: "Republic of Oman"
+ OMA_REP_nationalist: "République d'Oman"
  OMA_REP_nationalist_DEF: "the Republic of Oman"
  OMA_REP_nationalist_ADJ: "omanais"
  QAT_REP_fascism: "Islamic Republic of Qatar"
