Improved description for eurozone reforms

--- a/localisation/english/MD_focus_EU_l_english.yml
+++ b/localisation/english/MD_focus_EU_l_english.yml
@@ -765,7 +765,7 @@
  EU_fiscal_category: "Fiscal Policies of the EU"
  EU_fiscal_category_desc: "Fiscal Policies of the §C[EUU.GetFlag] The European Union§!:\n\nReforms and reactions to the fiscal crisis in the §C[EUU.GetFlag] The European Union§! and its member states."
  eurozone_reforms: "Reforms of the Eurozone"
- eurozone_reforms_desc: "Reforms of the Eurozone like §YEuropean Banking Union§!, §YEurobonds§! or the §YEuropean Stability Mechanism (ESM)§!."
+ eurozone_reforms_desc: "The Eurozone is currently on the cusp of a debt crisis unlike anything Europe has seen since the post-WW2 years. We must reform the Eurozone by passing reforms like §YEuropean Banking Union§!, §YEurobonds§! or the §YEuropean Stability Mechanism (ESM)§!.\n\nThe §YEuropean Debt Crisis§! can be avoided by passing the following reforms:\n- §YEuropean Banking Union§!\n- §YEurobonds§!\n- §YEuropean Stability Mechanism§!\n"
  troika_reforms: "Troika Reforms"
  troika_reforms_desc: "Reforms demanded by the so-called Troika of the European Commission (EC), the European Central Bank (ECB) and the International Monetary Fund (IMF) to prevent §Y[ROOT.GetNameWithFlag]§! from bankruptcy."
 
