--- a/localisation/simp_chinese/MD_decisions_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_decisions_l_simp_chinese.yml
@@ -544,7 +544,7 @@
  falkland_policy: "福克兰政策"
  SER_rename_nation: "更名为塞尔维亚和蒙地内哥罗"
  SER_rename_nation_desc: "南斯拉夫的意思是南斯拉夫人的土地，然而90年代一系列血腥的战争带走了大部分南斯拉夫人，现在我们只是塞尔维亚人和黑山人的土地，是时候我们被称为我们自己了。"
- game_rule_toggle_cheat_decisions: "§Y[show_cheat_decision_status_3]作弊决议§R全域性§!"
+ game_rule_toggle_cheat_decisions: "§Y[show_cheat_decision_status_3]§!作弊决议§R全域性§!"
  game_rule_toggle_cheat_decisions_desc: "§Y注意：§!世界上任何国家都可以切换作弊决定，其效果是§R全域性§!。将弹出一个事件，告诉您哪个国家切换了它。\n§Y你应该确保你被允许在多人游戏中使用这个决定！§!"
  cheat_decisions_disabled_TT: "作弊：§R禁用§!"
  cheat_decisions_enabled_TT: "作弊：§G启用§!"
@@ -853,3 +853,5 @@
  auto_decline_corruption_offers_desc: "将自动拒绝所有提供加成但有增加腐败程度风险的腐败事件。"
  lift_auto_decline_corruption_events: "接受腐败提议"
  lift_auto_decline_corruption_events_desc: "将解除当前自动拒绝所有腐败提议的状态。"
+ promote_reduced_spending_campaigns: "降低政府开支运动"
+ promote_reduced_spending_campaigns_desc: "政府急需削减开支，但民众对于政府所获资金的用途却有着截然不同的看法。我们可以通过恰当的宣传活动引导民众朝着正确的方向前进。\n\n§Y宣传活动成本§!修正：[?ROOT.modifier@propaganda_campaign_cost_modifier|-2%]\n"
