--- a/localisation/simp_chinese/MD_focus_SOV_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_focus_SOV_l_simp_chinese.yml
@@ -2107,7 +2107,7 @@
  SOV_national_battalions_osetia_TT: "£text_icon_ose §Y奥赛提§!国家营会被建立。"
  SOV_national_battalions_buratia_TT: "£text_icon_bur §Y布里亚特§!国家营会被建立。"
  SOV_national_battalions_armenia_TT: "£text_icon_arm §Y亚美尼亚§!国家营会被建立。"
- SOV_pmc_redut_TT: "£text_icon_redut §Y私人军事公司Redut§!单位将被派往战场。"
+ SOV_pmc_redut_TT: "£text_icon_redut §Y私人军事公司堡垒§!单位将被派往战场。"
  SOV_che_governorate_TT: "[CHE.GetNamewithFlag]将整合为§Y省§!"
  SOV_tatar_governorate_TT: "[TAT.GetNamewithFlag]将整合为§Y省§!"
  SOV_yakut_governorate_TT: "[YAK.GetNamewithFlag]将整合为§Y省§!"
@@ -2537,7 +2537,7 @@
  SOV_back_to_growth_desc: "没有什么能阻止我们 - 它只会暂时减慢我们的速度"
  SOV_help_prigoba: "向萨赫勒地区发送装备"
  SOV_help_prigoba_desc: "我们的代理人国家需要军事支持"
- SOV_pmc_redut: "私人军事公司Redut"
+ SOV_pmc_redut: "私人军事公司堡垒"
  SOV_pmc_redut_desc: "参与俄罗斯入侵乌克兰的俄罗斯私营军事公司由俄罗斯军事人员（包括动员的人员）组成。堡垒是由俄罗斯对外情报局、俄罗斯空军和部分俄罗斯军队的几个退伍军人小团体以及国防部在军事和维和任务中获得战斗经验的部门组成。"
  SOV_storm_z: "风暴-Z"
  SOV_storm_z_desc: "我们将招募囚犯到我们自己的单位"
