--- a/localisation/simp_chinese/state_names_l_simp_chinese.yml
+++ b/localisation/simp_chinese/state_names_l_simp_chinese.yml
@@ -372,11 +372,11 @@
  STATE_371: "阿德拉尔"
  STATE_372: "提法里提"
  STATE_373: "西撒哈拉"
- STATE_374: "阿尔里夫"
- STATE_375: "阿特拉斯"
- STATE_376: "摩洛哥撒哈拉"
- STATE_377: "摩洛哥大西洋沿岸"
- STATE_378: "南摩洛哥"
+ STATE_374: "丹吉尔-得土安-胡塞马"
+ STATE_375: " 马拉喀什-萨菲"
+ STATE_376: "德拉-塔菲拉勒特"
+ STATE_377: "卡萨布兰卡-塞塔特"
+ STATE_378: "苏斯-马塞"
  STATE_379: "姆扎卜"
  STATE_380: "奥瑞斯"
  STATE_381: "塔曼拉塞特"
@@ -1173,3 +1173,8 @@
  STATE_1172: "别尔哥罗德"
  STATE_1173: "奥廖尔"
  STATE_1174: "布良斯克"
+ STATE_1175: "东部"
+ STATE_1176: "非斯-梅克内斯"
+ STATE_1177: "拉巴特-塞拉-盖尼特拉"
+ STATE_1178: "贝尼迈拉勒-海尼夫拉"
+ STATE_1179: "盖勒敏-农河"
