--- a/Changelog.txt
+++ b/Changelog.txt
@@ -80,6 +80,7 @@ v1.10.2
   - Fixed Egyptian Helicopter Operator purchase from France causing crashes
   - Fixed visual issue in Economic Preview menu where it included subject military factories.
   - Fixed energy and defense cost calculation to not include subject military factories for the overlord.
+  - Fixed the Central African Republic event firing more than once a month
 
  Content:
   - New building "Commercialized Agriculture District"
