--- a/localisation/english/MD_focus_SUB_l_english.yml
+++ b/localisation/english/MD_focus_SUB_l_english.yml
@@ -1,6 +1,6 @@
 ﻿l_english:
- russian_subjects_focus_tree: "Tree of Focuses of the Subject of Russia"
- crimea_focus: "Tree of Focuses of Crimea"
+ russian_subjects_focus_tree: "Focus Tree of the Subject of Russia"
+ crimea_focus: "Crimea Focus Tree"
  
  SUB_start: "Adopt the Constitution of Russia"
  SUB_start_desc: "We are ready to fully adopt the Constitution of Russia"
@@ -1390,8 +1390,8 @@
  KHM_Russia_communism: "Russian Confederation"
  KHM_Russia_nationalist: "Russian National State"
  KHM_Russia_neutrality: "Russian Union"
- khanti_mansi_focus: "Tree of Focuses of Ugra"
- tatarstan_focus: "Tree of Focuses of Tatarstan"
+ khanti_mansi_focus: "Ugra Focus Tree"
+ tatarstan_focus: "Tatarstan Focus Tree"
 
  KHM_zhir: "LDPR's Policy"
  KHM_edro_idea: "United Russia Policy"
