--- a/localisation/english/MD_focus_VTB_l_english.yml
+++ b/localisation/english/MD_focus_VTB_l_english.yml
@@ -126,7 +126,7 @@
  vitebsk_rus.10.a: "We agree"
  vitebsk_rus.10.b: "We do not accept such conditions"
 
- vitebsk_focus: "Focuses of the Vitebsk People's Republic"
+ vitebsk_focus: "Vitebsk People's Republic Focus Tree"
 
 
  VTB_National_Defense_Strategy: "National Defense Strategy"
