--- a/localisation/english/MD_focus_PER_l_english.yml
+++ b/localisation/english/MD_focus_PER_l_english.yml
@@ -583,8 +583,8 @@
  PER_ask_russia_to_embargo_turkey_desc: "Who likes Turkey? *Clap clap clap-clap-clap* It's not us three! *Clap clap clap-clap-clap*"
  PER_ask_armenia_to_embargo_turkey: "Ask Armenia To Embargo Turkey"
  PER_ask_armenia_to_embargo_turkey_desc: "Who likes Turkey? *Clap clap clap-clap-clap* It's not us three! *Clap clap clap-clap-clap*"
- PER_ban_turkey_from_gas: "Ban Turkey From Gas"
- PER_ban_turkey_from_gas_desc: "Turkey does not deserve the gas we produce! We should ban them from purchasing it from our markets and pipelines!"
+ PER_ban_gas_sales_to_turkey: "Ban on Gas sales to Turkey"
+ PER_ban_gas_sales_to_turkey_desc: "Turkey does not deserve the gas we produce! We should ban them from purchasing it from our markets and pipelines!"
  PER_denounce_turkey_in_medias: "Denounce Turkey In Medias"
  PER_denounce_turkey_in_medias_desc: "We are so gonna ratio Turkey with this great tweet :Turkey, more like... No!"
  PER_start_the_islamic_propaganda: "Start The Islamic Propaganda"
