--- a/localisation/english/MD_techs_l_english.yml
+++ b/localisation/english/MD_techs_l_english.yml
@@ -1346,7 +1346,7 @@
  dead_missions: "DEAD missions"
  dead_missions_desc: "Strike aircraft will conduct missions targeting enemy AA directly, destroying those systems, and allowing us to conduct further missions without the threat of SAMs or AAA."
  escorted_bomber_flights: "Escorted Bomber Flights"
- escorted_bomber_flights_desc: "By using our fighters to protect our bombers, we will reduce bomber casulties and allow them more time to hit their targets."
+ escorted_bomber_flights_desc: "By using our fighters to protect our bombers, we will reduce bomber casualties and allow them more time to hit their targets."
  fighter_sweeps: "Fighter Sweeps"
  fighter_sweeps_desc: "Before bringing in our bombers, our fighters will sweep the skies clear, to give them a free path to their targets."
  high_altitude_fighter_escorts: "High Altitude Fighter Escorts"
